Bug 519021 - nsMessenger.cpp isn't 64-bit compatible. r+sr=standard8